# BFXRVST

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
.github/workflows/: windows-vst3.yml
Source/: BfxrParameterLayout.cpp  BfxrParameterLayout.h  BfxrWebBridge.cpp  BfxrWebBridge.h  BfxrWebPanel.cpp  BfxrWebPanel.h  NativeParamsPanel.cpp  NativeParamsPanel.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
cmake/: patch-bfxr2-vst.ps1
docs/: PARITY.md  QA.md  RELEASE.md
